chatgpt-retrieval-plugin/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: chatgpt-retrieval
  name: chatgpt-retrieval-svc
  namespace: default
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: chatgpt-retrieval
status:
  loadBalancer: {}
