chatgpt-retrieval-plugin/base/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chatgpt-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: chatgpt-retrieval-svc
            port:
              number: 8080
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
